@@ -1,3 +1,7 @@
+2010-07-01  Vladimir Serbinenko  <phcoder@gmail.com>
+
+	* util/grub-mkrescue.in: Avoid module duplication.
+
 2010-07-01  Sean Finney  <seanius@seanius.net>
 
 	* util/grub.d/10_linux.in: Don't use UUID for LVM root.
